fix: total survival mode fix with log-based market caching and trader pnl updates

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,12 @@
                 </div>
             </div>
 
+            <!-- Market Watch -->
+            <div id="market-watch"
+                style="margin-bottom: 2.5rem; display: flex; gap: 1rem; overflow-x: auto; padding-bottom: 1rem;">
+                <!-- Filled by JS -->
+            </div>
+
             <div class="layout-split">
                 <!-- Left: Trade Stream -->
                 <div class="section-card">
