feat: add global buyers/sellers feed and AI agent node visibility to dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,27 @@
                         </div>
                     </div>
 
+                    <!-- Agent Nodes -->
+                    <div class="section-card" style="margin-bottom: 1.5rem;">
+                        <div class="card-header">
+                            <div class="card-title">ACTIVE AI NODES</div>
+                            <div class="time-stamp">AUTO_SYNC</div>
+                        </div>
+                        <div id="agent-nodes" style="padding: 1rem;">
+                            <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 0.75rem;">
+                                <div
+                                    style="width: 8px; height: 8px; border-radius: 50%; background: var(--success); box-shadow: 0 0 10px var(--success);">
+                                </div>
+                                <span style="font-size: 0.8rem; color: #fff;">SMARTZER_BASE_01 (This Node)</span>
+                            </div>
+                            <div style="display: flex; align-items: center; gap: 0.75rem; opacity: 0.6;">
+                                <div style="width: 8px; height: 8px; border-radius: 50%; background: var(--accent);">
+                                </div>
+                                <span style="font-size: 0.8rem; color: #fff;">CLANKER_RELAY_V2 (Observing)</span>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Terminal Logs -->
                     <div class="section-card" style="background: #000;">
                         <div class="card-header" style="background: #111;">
