feat: implement real-time Whale Tracker feed

--- a/public/index.html
+++ b/public/index.html
@@ -169,10 +169,12 @@
                     <div class="card-header">
                         <div class="card-title">LARGE SCALE MOVEMENTS</div>
                     </div>
-                    <div style="padding: 2rem; text-align: center; opacity: 0.5;">
-                        <span style="font-size: 3rem;">🛰️</span><br><br>
-                        Establishing high-bandwidth connection to Zerion Whale Feed...<br>
-                        <i style="font-size: 0.8rem;">Real-time transaction stream will appear here.</i>
+                    <div id="whale-feed-list" class="scroll-area">
+                        <div style="padding: 2rem; text-align: center; opacity: 0.5;">
+                            <span style="font-size: 3rem;">🛰️</span><br><br>
+                            Establishing high-bandwidth connection...<br>
+                            <i style="font-size: 0.8rem;">Real-time transaction stream will appear here.</i>
+                        </div>
                     </div>
                 </div>
             </div>
